--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
     "gh-pages": "^3.2.3",
+    "postcss": "^8.5.3",
+    "postcss-safe-parser": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
