--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+  "build": "react-scripts --openssl-legacy-provider build",
+   "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
