--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
-  "build": "react-scripts --openssl-legacy-provider build",
+"build": "react-scripts build",
    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
